# ripple-memory

./: .gitattributes  .gitignore  AGENTS.md  DEVELOPMENT.md  INSTALL_FOR_LLM.md  LICENSE  README.md  RELEASE_AUDIT.md  SECURITY.md  pyproject.toml
integrations/: claude-code-ripple-memory.md  codex-hook-adapter.md  codex-ripple-memory.md  generic-agent-ripple-memory.md  mimo-code-ripple-memory.md  qwen-code-ripple-memory.md
plugins/claude-code/: .mcp.json.template  README.md  settings.json.template
plugins/claude-code/ripple-memory-hooks/scripts/: ripple-memory-claude-hook.cmd
plugins/codex/: README.md  marketplace.json.template
plugins/codex/ripple-memory-hooks/: README.md  hooks.json.template
plugins/mimocode/: README.md
plugins/mimocode/ripple-memory-hooks/: index.ts  package.json
plugins/qwen-code/: README.md  settings.json.template
skills/ripple-memory/: SKILL.md
skills/ripple-memory/references/: original-word-latch.md
src/memoria_mcp/: __init__.py  agent_daemon.py  archive.py  bm25.py  claude_code_hook.py  codex_hook.py  config.py  context_cli.py  daemon_client.py  dreamer.py  graph.py  hook_core.py  install_check.py  lifecycle.py  mcp_sse_server.py  mcp_stdio_proxy.py  memory_index.py  mimocode_hook.py  models.py  persistence.py  queue_worker.py  qwen_code_hook.py  search_daemon.py  search_index.py  search_ipc.py  server.py  tool_specs.py  write_gate.py  write_queue.py
tests/: agent_daemon_check.py  baseline_engine_check.py  claude_code_hook_check.py  design_contract_check.py  hook_adapter_check.py  import_hygiene_check.py  lifecycle_check.py  memory_evolution_check.py  mimocode_hook_check.py  model_baseline_check.py  recall_quality_check.py  soft_timeout_recovery_check.py  storage_architecture_check.py  write_queue_check.py
tools/: download_embedding_model.py
(+4 files in other folders)
